--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
     "clsx": "^2.1.1",
     "next": "15.1.3",
     "react": "^19.0.0",
