--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-switch": "^1.1.2",
     "clsx": "^2.1.1",
     "next": "15.1.3",
     "react": "^19.0.0",
