--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.2.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-switch": "^1.1.2",
+    "@tailwindcss/forms": "^0.5.10",
     "clsx": "^2.1.1",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
