--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -12,9 +12,12 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-switch": "^1.1.2",
+    "@storybook/nextjs": "^8.4.7",
+    "@storybook/react": "^8.4.7",
     "@tailwindcss/forms": "^0.5.10",
     "clsx": "^2.1.1",
     "next": "15.1.3",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
@@ -23,7 +26,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
