--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.1",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@storybook/nextjs": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@tailwindcss/forms": "^0.5.10",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "15.1.3",
     "path": "^0.12.7",
