--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -16,6 +16,7 @@
     "@storybook/nextjs": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@tailwindcss/forms": "^0.5.10",
+    "antd": "^5.23.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "15.1.3",
