--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -24,6 +24,7 @@
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-lottie-player": "^2.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^3.1.0",
