--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "keen-slider": "^6.8.6",
     "next": "14.2.15",
+    "openai": "^4.78.1",
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
