--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "keen-slider": "^6.8.6",
     "next": "14.2.15",
     "path": "^0.12.7",
     "react": "^18",
