--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/navermaps": "^3.7.8",
     "@types/node": "^20.17.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
