--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -25,6 +25,7 @@
     "openai": "^4.78.1",
     "path": "^0.12.7",
     "react": "^18",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
