--- a/woo-ah-hana-web/package.json
+++ b/woo-ah-hana-web/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.2.0",
     "keen-slider": "^6.8.6",
     "next": "14.2.15",
     "openai": "^4.78.1",
